--- a/P2/Punto2.ipynb
+++ b/P2/Punto2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:f486c8f52cd6180a00e400de97ac6743c99ed40a4fdc1681762075fcc0d89020"
+  "signature": "sha256:f6410940b594682fc432c60d8aa9400b86f234bc7dfcffedc2fbd1afb243e0ae"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -200,77 +200,108 @@
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "import netCDF4"
+      "from netCDF4 import Dataset"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [],
-     "prompt_number": 7
+     "prompt_number": 35
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "fh = Dataset('', mode='r')"
+      "from netCDF4 import Dataset\n",
+      "import numpy as np\n",
+      "\n",
+      "root_grp = Dataset('test.nc', 'w', format='NETCDF4')\n",
+      "root_grp.description = 'Example temperature data'\n",
+      "\n",
+      "# dimensions\n",
+      "root_grp.createDimension('time', None)\n",
+      "root_grp.createDimension('lat', 72)\n",
+      "root_grp.createDimension('lon', 144)\n",
+      "\n",
+      "# variables\n",
+      "times = root_grp.createVariable('time', 'f8', ('time',))\n",
+      "latitudes = root_grp.createVariable('latitude', 'f4', ('lat',))\n",
+      "longitudes = root_grp.createVariable('longitude', 'f4', ('lon',))\n",
+      "temp = root_grp.createVariable('temp', 'f4', ('time', 'lat', 'lon',))\n",
+      "\n",
+      "# data\n",
+      "lats =  np.arange(-90, 90, 2.5)\n",
+      "lons =  np.arange(-180, 180, 2.5)\n",
+      "latitudes[:] = lats\n",
+      "longitudes[:] = lons\n",
+      "for i in range(5):\n",
+      "    temp[i,:,:] = np.random.uniform(size=(len(lats), len(lons)))\n",
+      "\n",
+      "# group\n",
+      "# my_grp = root_grp.createGroup('my_group')\n",
+      "\n",
+      "root_grp.close()"
      ],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "NETCDF4\n"
-       ]
-      }
-     ],
-     "prompt_number": 9
+     "outputs": [],
+     "prompt_number": 60
     },
     {
      "cell_type": "code",
      "collapsed": false,
      "input": [
-      "nc= netCDF4.Dataset('air.mon.ltm.nc','a') # re-open in \u2018append\u2019 mode\n",
-      "lat_dim=nc.createDimension('lat',73)\n",
-      "lon_dim=nc.createDimension('lon',144)\n",
-      "time_dim=nc.createDimension('time',None) # unlimited dim\n",
-      "print\n",
-      "nc.dimensions"
+      "from netCDF4 import Dataset\n",
+      "import pylab as pl\n",
+      "\n",
+      "root_grp = Dataset('air.mon.ltm.nc')\n",
+      "\n",
+      "temp = root_grp.variables['longitude']\n",
+      "\n",
+      "for i in range(len(temp)):\n",
+      "    pl.clf()\n",
+      "    pl.contourf(temp[i])\n",
+      "    pl.show()\n",
+      "    raw_input('Press enter.')"
      ],
      "language": "python",
      "metadata": {},
      "outputs": [
       {
-       "output_type": "stream",
-       "stream": "stdout",
+       "ename": "TypeError",
+       "evalue": "Input must be a 2D array.",
+       "output_type": "pyerr",
+       "traceback": [
+        "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m\n\u001b[0;31mTypeError\u001b[0m                                 Traceback (most recent call last)",
+        "\u001b[0;32m<ipython-input-65-684c2ea62579>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m()\u001b[0m\n\u001b[1;32m      8\u001b[0m \u001b[0;32mfor\u001b[0m \u001b[0mi\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mrange\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mlen\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m      9\u001b[0m     \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mclf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m---> 10\u001b[0;31m     \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontourf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mtemp\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0mi\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m     11\u001b[0m     \u001b[0mpl\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshow\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m     12\u001b[0m     \u001b[0mraw_input\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'Press enter.'\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/pyplot.pyc\u001b[0m in \u001b[0;36mcontourf\u001b[0;34m(*args, **kwargs)\u001b[0m\n\u001b[1;32m   2648\u001b[0m         \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mhold\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mhold\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2649\u001b[0m     \u001b[0;32mtry\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 2650\u001b[0;31m         \u001b[0mret\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontourf\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   2651\u001b[0m         \u001b[0mdraw_if_interactive\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   2652\u001b[0m     \u001b[0;32mfinally\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/axes.pyc\u001b[0m in \u001b[0;36mcontourf\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   7981\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcla\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7982\u001b[0m         \u001b[0mkwargs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;34m'filled'\u001b[0m\u001b[0;34m]\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mTrue\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 7983\u001b[0;31m         \u001b[0;32mreturn\u001b[0m \u001b[0mmcontour\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQuadContourSet\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   7984\u001b[0m     \u001b[0mcontourf\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__doc__\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mmcontour\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mQuadContourSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontour_doc\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   7985\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/contour.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ax, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1412\u001b[0m         \u001b[0mare\u001b[0m \u001b[0mdescribed\u001b[0m \u001b[0;32min\u001b[0m \u001b[0mQuadContourSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mcontour_doc\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1413\u001b[0m         \"\"\"\n\u001b[0;32m-> 1414\u001b[0;31m         \u001b[0mContourSet\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m__init__\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0max\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1415\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1416\u001b[0m     \u001b[0;32mdef\u001b[0m \u001b[0m_process_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mself\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/contour.pyc\u001b[0m in \u001b[0;36m__init__\u001b[0;34m(self, ax, *args, **kwargs)\u001b[0m\n\u001b[1;32m    858\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_transform\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mget\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m'transform'\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNone\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    859\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m--> 860\u001b[0;31m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m*\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0;34m**\u001b[0m\u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m    861\u001b[0m         \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_process_levels\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m    862\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/contour.pyc\u001b[0m in \u001b[0;36m_process_args\u001b[0;34m(self, *args, **kwargs)\u001b[0m\n\u001b[1;32m   1425\u001b[0m             \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzmax\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mzmax\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1426\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1427\u001b[0;31m             \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_contour_args\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mkwargs\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1428\u001b[0m \u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1429\u001b[0m             \u001b[0m_mask\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mgetmask\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/contour.pyc\u001b[0m in \u001b[0;36m_contour_args\u001b[0;34m(self, args, kwargs)\u001b[0m\n\u001b[1;32m   1486\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mNargs\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1487\u001b[0m             \u001b[0mz\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mma\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0masarray\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m0\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mdtype\u001b[0m\u001b[0;34m=\u001b[0m\u001b[0mnp\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mfloat64\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1488\u001b[0;31m             \u001b[0mx\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0my\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mself\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0m_initialize_x_y\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0mz\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1489\u001b[0m             \u001b[0margs\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0margs\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m1\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1490\u001b[0m         \u001b[0;32melif\u001b[0m \u001b[0mNargs\u001b[0m \u001b[0;34m<=\u001b[0m \u001b[0;36m4\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;32m/usr/lib/pymodules/python2.7/matplotlib/contour.pyc\u001b[0m in \u001b[0;36m_initialize_x_y\u001b[0;34m(self, z)\u001b[0m\n\u001b[1;32m   1571\u001b[0m         \"\"\"\n\u001b[1;32m   1572\u001b[0m         \u001b[0;32mif\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mndim\u001b[0m \u001b[0;34m!=\u001b[0m \u001b[0;36m2\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0;32m-> 1573\u001b[0;31m             \u001b[0;32mraise\u001b[0m \u001b[0mTypeError\u001b[0m\u001b[0;34m(\u001b[0m\u001b[0;34m\"Input must be a 2D array.\"\u001b[0m\u001b[0;34m)\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m\u001b[1;32m   1574\u001b[0m         \u001b[0;32melse\u001b[0m\u001b[0;34m:\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[1;32m   1575\u001b[0m             \u001b[0mNy\u001b[0m\u001b[0;34m,\u001b[0m \u001b[0mNx\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0mz\u001b[0m\u001b[0;34m.\u001b[0m\u001b[0mshape\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n",
+        "\u001b[0;31mTypeError\u001b[0m: Input must be a 2D array."
+       ]
+      },
+      {
+       "metadata": {},
+       "output_type": "display_data",
+       "png": "iVBORw0KGgoAAAANSUhEUgAAAXcAAAEACAYAAABI5zaHAAAABHNCSVQICAgIfAhkiAAAAAlwSFlz\nAAALEgAACxIB0t1+/AAADB5JREFUeJzt3F+IXNUdwPHvNBsFoamVhTwkkUAM/ikoKsZYEa9E6OpD\nAxYaom2xCs1LbF9KY3xo5sWWvBSRgIY0Sp/Mg/oQS0iw1cESTDSgMalJyG4byB8Rta1IEZol04dz\nkxknu7l3Zu7eTX77/cDC3L0nN8dD+O7dc2cESZIkSZIkSZIkSZIkSZKk0F4CPgUOXWLM88Bx4CBw\nex2TkiQN5z5SsKeL+8PArvz13cC+OiYlSRreUqaP+4vAmq7jo8DCmZ6QJGl636rgGouAk13Hp4DF\nFVxXkjSgKuIO0Og5bld0XUnSAEYquMZpYEnX8eL8e9+wbNmy9sTERAV/nSTNKRPADf3+oSru3HcC\nP8tfrwT+Q3p3zTdMTEzQbrf9arfZtGnTrM/hcvlyLVwL1+LSX8CyQcJc5s79FeB+YJS0t74JmJ+f\n20p6p8zDwDjwX+Dng0xEklSdMnFfW2LM+mEnIkmqTlUPVNWHLMtmewqXDdeiw7XocC2G1/sul5nU\nzvePJEklNRoNGKDV3rlLUkDGXZICMu6SFJBxl6SAjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy\n7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk3CUpIOMuSQEZ\nd0kKyLhLUkDGXZICMu6SFJBxl6SAjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIqE/cx4ChwHNgw\nxflRYDfwIXAYeLyqyUmSBtMoOD8POAY8CJwG3gfWAke6xjSBq4GNpNAfAxYCkz3Xarfb7eFnLElz\nSKPRgOJWX6Tozn0FMA6cAM4CO4DVPWM+ARbkrxcAX3Bx2CVJNRopOL8IONl1fAq4u2fMNuAt4Azw\nbeDHlc1OkjSQoriX2Ud5hrTfngHLgDeB24Cvegc2m80Lr7MsI8uycrOUpDmi1WrRarWGvk7RPs5K\n0p76WH68ETgHbO4aswt4FtibH/+V9OD1QM+13HOXpD7N1J77AWA5sBS4ClgD7OwZc5T0wBXSg9Qb\ngX/0OxFJUnWKtmUmgfXAHtI7Z7aT3imzLj+/Ffgd8DJwkPTD4jfAv2ZispKkcvq+1R+C2zKS1KeZ\n2paRJF2BjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJ\nCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk3CUpIOMuSQEZd0kKyLhLUkDGXZICMu6SFJBxl6SAjLsk\nBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy7pIUkHGXpICMuyQFZNwlKaAycR8DjgLHgQ3TjMmAD4DD\nQKuKiUmSBtcoOD8POAY8CJwG3gfWAke6xlwL7AV+AJwCRoHPp7hWu91uDztfSZpTGo0GFLf6IkV3\n7iuAceAEcBbYAazuGfMo8Bop7DB12CVJNSqK+yLgZNfxqfx73ZYD1wFvAweAn1Y2O0nSQEYKzpfZ\nR5kP3AGsAq4B3gX2kfboJUmzoCjup4ElXcdL6Gy/nHeStBXzdf71DnAbU8S92WxeeJ1lGVmW9Ttf\nSQqt1WrRarWGvk7RJv0I6YHqKuAM8B4XP1C9CdhCeqB6NbAfWAN83HMtH6hKUp8GfaBadOc+CawH\n9pDeObOdFPZ1+fmtpLdJ7gY+As4B27g47JKkGvX902AI3rlLUp9m6q2QkqQrkHGXpICMuyQFZNwl\nKSDjLkkBGXdJCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk3CUpIOMuSQEZd0kKyLhLUkDGXZICMu6S\nFJBxl6SAjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJ\nCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk3CUpoDJxHwOOAseBDZcYdxcwCTxSwbwkSUMoivs8YAsp\n8LcAa4Gbpxm3GdgNNKqcoCSpf0VxXwGMAyeAs8AOYPUU454CXgU+q3JykqTBFMV9EXCy6/hU/r3e\nMauBF/LjdjVTkyQNqijuZUL9HPB0PraB2zKSNOtGCs6fBpZ0HS8h3b13u5O0XQMwCjxE2sLZ2Xux\nZrN54XWWZWRZ1tdkJSm6VqtFq9Ua+jpFd9kjwDFgFXAGeI/0UPXINONfBt4AXp/iXLvddsdGkvrR\naDRggB2Rojv3SWA9sIf0jpjtpLCvy89v7fcvlCTNvDr3x71zl6Q+DXrn7idUJSkg4y5JARl3SQrI\nuEtSQMZdkgIy7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk\n3CUpIOMuSQEZd0kKyLhLUkDGXZICMu6SFJBxl6SAjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy\n7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJCsi4S1JAZeM+BhwFjgMbpjj/GHAQ+AjYC9xayewkSQNp\nlBgzDzgGPAicBt4H1gJHusbcA3wMfEn6QdAEVvZcp91ut4ecriTNLY1GA8q1+hvK3LmvAMaBE8BZ\nYAewumfMu6SwA+wHFvc7EUlSdcrEfRFwsuv4VP696TwJ7BpmUpKk4YyUGNPPXsoDwBPAvVOdbDab\nF15nWUaWZX1cWpLia7VatFqtoa9TZh9nJWkPfSw/3gicAzb3jLsVeD0fNz7Fddxzl6Q+zeSe+wFg\nObAUuApYA+zsGXM9Kew/YeqwS5JqVGZbZhJYD+whvXNmO+mdMuvy81uB3wLfBV7Iv3eW9CBWkjQL\n+r7VH4LbMpLUp5nclpEkXWGMuyQFZNwlKSDjLkkBGXdJCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk\n3CUpIOMuSQEZd0kKyLhLUkDGXZICMu6SFJBxl6SAjLskBWTcJSkg4y5JARl3SQrIuEtSQMZdkgIy\n7pIUkHGXpICMuyQFZNwlKSDjLkkBGXdJCsi4S1JAxl2SAjLukhSQcZekgIy7JAVk3CUpoDJxHwOO\nAseBDdOMeT4/fxC4vZqpSZIGVRT3ecAWUuBvAdYCN/eMeRi4AVgO/AJ4oeI5htNqtWZ7CpcN16LD\ntehwLYZXFPcVwDhwAjgL7ABW94z5IfCn/PV+4FpgYXVTjMd/uB2uRYdr0eFaDK8o7ouAk13Hp/Lv\nFY1ZPPzUJEmDKop7u+R1GgP+OUnSDOiNcq+VQJO05w6wETgHbO4a8yLQIm3ZQHr4ej/wac+1xoFl\ng09VkuakCdJzzUqN5BdeClwFfMjUD1R35a9XAvuqnoQkqXoPAcdId94b8++ty7/O25KfPwjcUevs\nJEmSJA3GDz11FK3FY6Q1+AjYC9xa39RqV+bfBcBdwCTwSB2TmgVl1iEDPgAOk55nRVW0FqPAbtJ2\n8GHg8dpmVr+XSM8pD11izKx2cx5pe2YpMJ/iPfq7ibtHX2Yt7gG+k78eY26vxflxbwF/Bn5U1+Rq\nVGYdrgX+TuftxKN1Ta5mZdaiCfw+fz0KfEF6DhjRfaRgTxf3vrtZ9f9bxg89dZRZi3eBL/PX+4n7\n+YAyawHwFPAq8FltM6tXmXV4FHiN9HkRgM/rmlzNyqzFJ8CC/PUCUtwna5pf3f4G/PsS5/vuZtVx\n90NPHWXWotuTdH4yR1P238VqOv/7ioiflSizDsuB64C3gQPAT+uZWu3KrMU24HvAGdJWxK/qmdpl\nqe9uVv0rjh966ujnv+kB4Ang3hmay2wrsxbPAU/nYxsUfwbjSlRmHeaT3nG2CriG9NvdPtJeayRl\n1uIZ0nZNRvqMzJvAbcBXMzety1pf3aw67qeBJV3HS+j8ejndmMX596IpsxaQHqJuI+25X+rXsitZ\nmbW4k84H4UZJb8E9C+yc8dnVp8w6nCRtxXydf71DClq0uJdZi+8Dz+avJ4B/AjeSfqOZa2a9m37o\nqaPMWlxP2ndcWevM6ldmLbq9TMx3y5RZh5uAv5AeOF5DesB2S31TrE2ZtfgDsCl/vZAU/+tqmt9s\nWEq5B6qz1k0/9NRRtBZ/JD0k+iD/eq/uCdaozL+L86LGHcqtw69J75g5BPyy1tnVq2gtRoE3SJ04\nRHrYHNUrpGcL/yP99vYEc7ebkiRJkiRJkiRJkiRJkiRJkiRJkq4E/we+jwyIuTI3ZAAAAABJRU5E\nrkJggg==\n",
        "text": [
-        "\n",
-        "144\n"
+        "<matplotlib.figure.Figure at 0xacd0c30c>"
        ]
       }
      ],
-     "prompt_number": 12
+     "prompt_number": 65
     },
     {
      "cell_type": "code",
      "collapsed": false,
-     "input": [
-      "print len(lon_dim)\n",
-      "print time_dim.isunlimited()"
-     ],
+     "input": [],
      "language": "python",
      "metadata": {},
-     "outputs": [
-      {
-       "output_type": "stream",
-       "stream": "stdout",
-       "text": [
-        "144\n",
-        "True\n"
-       ]
-      }
-     ],
-     "prompt_number": 14
+     "outputs": [],
+     "prompt_number": 10
     },
     {
      "cell_type": "code",
