por si las moscas

--- a/P2/Punto2.ipynb
+++ b/P2/Punto2.ipynb
@@ -1,7 +1,7 @@
 {
  "metadata": {
   "name": "",
-  "signature": "sha256:89581fc6cf0e02bd01a0e4ccf5f228729ae5fcfc84fb3d93247d048af0b1fa70"
+  "signature": "sha256:e05c6034699ae6c06c4559e6b34bc7e0cc2ed31660ee8d15dead2efe967ccc41"
  },
  "nbformat": 3,
  "nbformat_minor": 0,
@@ -143,47 +143,33 @@
     {
      "cell_type": "raw",
      "metadata": {},
-     "source": [
-      "plt.figure(figsize=(20,15)) #tama;o de la imagen\n",
-      "map = Basemap(projection='robin', lat_0=0, lon_0=120, #ubicacion del mapa mundi centrado en dichas lat y lon\n",
-      "resolution = 'l', area_thresh = 1000.0)\n",
-      "plt.title(u\"Ubicacion r\u00edos m\u00e1s caudalosos\")\n",
-      "map.drawcoastlines()\n",
-      "#map.drawcountries()\n",
-      "map.bluemarble()\n",
-      "#map.drawmapboundary()\n",
-      "#map.drawmeridians(np.arange(0, 360, 30))\n",
-      "#map.drawparallels(np.arange(-90, 90, 30))"
-     ]
+     "source": []
     },
     {
-     "cell_type": "raw",
+     "cell_type": "code",
+     "collapsed": false,
+     "input": [
+      "plt.figure(figsize=(40,35)) #tama;o de la imagen\n",
+      "map = Basemap(projection='robin', lat_0=0, lon_0=120, #ubicacion del mapa mundi centrado en dichas lat y lon\n",
+      "resolution = 'l', area_thresh = 1000.0)\n",
+      "plt.title(u\"Ubicacion r\u00edos m\u00e1s caudalosos\",fontsize=36)\n",
+      "map.drawcoastlines()\n",
+      "map.drawcountries()\n",
+      "map.bluemarble()\n",
+      "map.drawmapboundary()\n",
+      "map.drawmeridians(np.arange(0, 360, 30))\n",
+      "map.drawparallels(np.arange(-90, 90, 30))\n",
+      "#aqui se generan los datos x,y para graficar con plot\n",
+      "x,y = map(LAT, LON)\n",
+      "map.scatter(x, y, color='red')\n",
+      "map.drawmeridians(np.arange(0, 360, 30))\n",
+      "map.drawparallels(np.arange(-90, 90, 30))\n",
+      "#show()\n",
+      "plt.savefig('myfig.png')"
+     ],
+     "language": "python",
      "metadata": {},
-     "source": [
-      "import time, calendar, datetime, numpy\n",
-      "from mpl_toolkits.basemap import Basemap\n",
-      "import matplotlib.pyplot as plt\n",
-      "import urllib, os\n",
-      "# data downloaded from the form at\n",
-      "# http://coastwatch.pfeg.noaa.gov/erddap/tabledap/apdrcArgoAll.html \n",
-      "filename, headers = urllib.urlretrieve('http://www.cgd.ucar.edu/cas/catalog/surface/dai-runoff/coastal-stns-byVol-updated-oct2007.txt')\n",
-      "lats = dset.variables['latitude'][:]\n",
-      "lons = dset.variables['longitude'][:]\n",
-      "time = dset.variables['time']\n",
-      "times = time[:]\n",
-      "t1 = times.min(); t2 = times.max()\n",
-      "date1 = num2date(t1, units=time.units)\n",
-      "date2 = num2date(t2, units=time.units)\n",
-      "dset.close()\n",
-      "os.remove(filename)\n",
-      "# draw map with markers for float locations\n",
-      "m = Basemap(projection='hammer',lon_0=180)\n",
-      "x, y = m(lons,lats)\n",
-      "m.drawmapboundary(fill_color='#99ffff')\n",
-      "m.fillcontinents(color='#cc9966',lake_color='#99ffff')\n",
-      "m.scatter(x,y,3,marker='o',color='r')\n",
-      "plt.show()"
-     ]
+     "outputs": []
     },
     {
      "cell_type": "markdown",
@@ -283,74 +269,6 @@
       "Hasta aqu\u00ed est\u00e1 perfecto\n",
       "-------------------------"
      ]
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "def lon_lat_to_cartesian(lon, lat, R = 1):\n",
-      "    \"\"\"\n",
-      "    calculates lon, lat coordinates of a point on a sphere with\n",
-      "    radius R\n",
-      "    \"\"\"\n",
-      "    lon_r = np.radians(lon)\n",
-      "    lat_r = np.radians(lat)\n",
-      "\n",
-      "    x =  R * np.cos(lat_r) * np.cos(lon_r)\n",
-      "    y = R * np.cos(lat_r) * np.sin(lon_r)\n",
-      "    z = R * np.sin(lat_r)\n",
-      "    return x,y,z"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 12
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "fr = Dataset('air.mon.ltm.nc')"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 13
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "#for interpolation\n",
-      "from scipy.spatial import cKDTree\n",
-      "from scipy.interpolate import NearestNDInterpolator"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 14
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "xs, ys, zs = lon_lat_to_cartesian(lon2d.flatten(), lat2d.flatten())"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 15
-    },
-    {
-     "cell_type": "code",
-     "collapsed": false,
-     "input": [
-      "tree = cKDTree(zip(xs, ys, zs))"
-     ],
-     "language": "python",
-     "metadata": {},
-     "outputs": [],
-     "prompt_number": 16
     },
     {
      "cell_type": "code",
